# esp32cam_rs

./: Cargo.toml  sdkconfig.defaults
.cargo/: config.toml
examples/idotmatrix/: idotmatrixble.rs
examples/telegram_bot/: bot_api.rs  main.rs
src/: espcam.rs  wifi_handler.rs
